@@ -34,8 +34,6 @@ import java.awt.event.KeyListener;
 import javax.swing.JScrollPane;
 import javax.swing.text.JTextComponent;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.lobobrowser.html.HtmlAttributeProperties;
 import org.lobobrowser.html.dombl.JTextAreaImpl;
 import org.lobobrowser.html.domimpl.DOMElementImpl;
@@ -50,9 +48,6 @@ public class InputTextAreaControl extends BaseInputControl {
 
 	/** The Constant serialVersionUID. */
 	private static final long serialVersionUID = 1L;
-	
-	/** The Constant logger. */
-    protected static final Logger logger = LogManager.getLogger(InputTextAreaControl.class.getName());
 
 	/** The widget. */
 	private final JTextAreaImpl widget;
@@ -84,7 +79,7 @@ public class InputTextAreaControl extends BaseInputControl {
 		widget.setVisible(modelNode.getHidden());
 		widget.applyComponentOrientation(direction(modelNode.getDir()));
 		widget.setEditable(
-				Boolean.valueOf(modelNode.getContentEditable() == null ? "true" : modelNode.getContentEditable()));
+				new Boolean(modelNode.getContentEditable() == null ? "true" : modelNode.getContentEditable()));
 		widget.setEnabled(!modelNode.getDisabled());
 		widget.setPlaceholder(modelNode.getPlaceholder());
 		widget.setSelectionColor(Color.BLUE);
@@ -123,7 +118,7 @@ public class InputTextAreaControl extends BaseInputControl {
 			try {
 				this.setCols(Integer.parseInt(colsStr));
 			} catch (NumberFormatException nfe) {
-				logger.error(nfe);
+				// ignore
 			}
 		}
 		String rowsStr = element.getAttribute(HtmlAttributeProperties.ROWS);
@@ -131,7 +126,7 @@ public class InputTextAreaControl extends BaseInputControl {
 			try {
 				this.setRows(Integer.parseInt(rowsStr));
 			} catch (NumberFormatException nfe) {
-				logger.error(nfe);
+				// ignore
 			}
 		}
 	}
