@@ -52,6 +52,8 @@ import org.w3c.dom.Node;
  * resolved XPath expression. </p>
  *
  * @see org.w3c.dom.xpath.XPathExpression
+ *
+ * @xsl.usage internal
  */
 public class XPathExpressionImpl implements XPathExpression {
 
@@ -129,7 +131,8 @@ public class XPathExpressionImpl implements XPathExpression {
 	 *                NOT_SUPPORTED_ERR: The Node is not a type permitted as an
 	 *                XPath context node.
 	 *
-	 * @see org.w3c.dom.xpath.XPathExpression#evaluate(Node, short, Object)
+	 * @see org.w3c.dom.xpath.XPathExpression#evaluate(Node, short, XPathResult)
+	 * @xsl.usage internal
 	 */
 	@Override
 	public Object evaluate(Node contextNode, short type, Object result) throws XPathException, DOMException {
@@ -159,7 +162,7 @@ public class XPathExpressionImpl implements XPathExpression {
 		// done with it!
 		if (!XPathResultImpl.isValidType(type)) {
 			String fmsg = XPATHMessages.createXPATHMessage(XPATHErrorResources.ER_INVALID_XPATH_TYPE,
-					new Object[] { Integer.valueOf(type) });
+					new Object[] { new Integer(type) });
 			throw new XPathException(XPathException.TYPE_ERR, fmsg);
 		}
 
