@@ -64,7 +64,7 @@ public class VolatileContentImpl implements ContentBuffer {
         this.contentType = contentType;
         this.bytes = bytes;
         synchronized (volatileMap) {
-            volatileMap.put(Long.valueOf(this.id), this);
+            volatileMap.put(new Long(this.id), this);
         }
     }
 
@@ -90,7 +90,7 @@ public class VolatileContentImpl implements ContentBuffer {
      */
     public static VolatileContentImpl getVolatileContent(long id) {
         synchronized (volatileMap) {
-            return (VolatileContentImpl) volatileMap.get(Long.valueOf(id));
+            return (VolatileContentImpl) volatileMap.get(new Long(id));
         }
     }
 
@@ -99,7 +99,7 @@ public class VolatileContentImpl implements ContentBuffer {
 	 * @return the bytes
 	 */
     public byte[] getBytes() {
-        return this.bytes;
+        return bytes;
     }
 
     /** Gets the content type.
